Solved Day 9